<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="empresa_detalhes">Sobre a empresa</string>
    <string name="title_activity_empresa">Sobre a ATM Consultoria</string>
    <string name="servico_activity">Serviços</string>
    <string name="clientes_activity">Nossos Clientes</string>
    <string name="contato_activity">Fale Conosco</string>
    <string name="empresa_name">ATM Consultoria</string>
    <string name="texto_sobre_empresa">Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet,Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet,Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet,Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet, Lorem ipsum dolorem sit amet.</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processo">Processos</string>
    <string name="texto_projetos">Acompanhamento e projetos</string>
    <string name="texto_outros">. . .</string>
    <string name="texto_sys">Empresa de desenvolvimento de sistemas</string>
    <string name="texto_rsm">Empresa de auditoria</string>
    <string name="texto_contato">Contato</string>
    <string name="texto_email">Email: consultoria@atm.com.br</string>
    <string name="texto_telefone">Telefone: (11) 3333-2222</string>
    <string name="texto_celular">Celular: (11) 9999-8888</string>
</resources>
