<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="atmempresaconsultoria.cursoandroid.com.atmempresaconsultoria.ContatoActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/detalhe_contato"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_marginBottom="42dp"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/imageView7"
            android:layout_toRightOf="@+id/imageView7"
            android:text="@string/texto_contato"
            android:textColor="@color/contato_color"
            android:textSize="@dimen/textLarge" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:text="@string/texto_email"
            android:textSize="@dimen/textMedium"
            android:layout_below="@+id/imageView7"
            android:layout_alignLeft="@+id/imageView7"
            android:layout_alignStart="@+id/imageView7"
            android:layout_marginTop="13dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:text="@string/texto_telefone"
            android:textSize="@dimen/textMedium"
            android:layout_below="@+id/textView12"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13"
            android:layout_below="@+id/textView13"
            android:text="@string/texto_celular"
            android:textSize="@dimen/textMedium" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
