<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="atmempresaconsultoria.cursoandroid.com.atmempresaconsultoria.ClienteActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/detalhe_cliente"
            android:layout_marginRight="28dp"
            android:layout_marginEnd="28dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView8"
            android:layout_toStartOf="@+id/textView8"
            android:layout_marginTop="21dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:text="@string/clientes_activity"
            android:textColor="@color/texto_nossos_clientes"
            android:textSize="@dimen/textLarge"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="48dp"
            android:layout_marginEnd="48dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            app:srcCompat="@drawable/cliente1"
            android:layout_below="@+id/imageView4"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="91dp"
            app:srcCompat="@drawable/cliente2"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_sys"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="21dp"
            android:layout_marginEnd="21dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/imageView6"
            android:text="@string/texto_rsm" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
